Refactoring code to implement cloudinary
